--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,7 @@ envlist = fmt, lint, unit
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-lib_path = {toxinidir}/lib/charms/parca/
-all_path = {[vars]src_path} {[vars]tst_path}  {[vars]lib_path} 
+all_path = {[vars]src_path} {[vars]tst_path}
 lxd_name = juju-introspect-func-test
 ftest_path = {toxinidir}/tests/functional
 
@@ -42,17 +41,7 @@ deps =
     # renovate: datasource=pypi
     codespell==2.2.2
 commands =
-    # uncomment the following line if this charm owns a lib
-    codespell {[vars]lib_path}
-    codespell {toxinidir} \
-        --skip {toxinidir}/.git \
-        --skip {toxinidir}/.tox \
-        --skip {toxinidir}/build \
-        --skip {toxinidir}/lib \
-        --skip {toxinidir}/venv \
-        --skip {toxinidir}/.mypy_cache \
-        --skip {toxinidir}/icon.svg
-    
+    codespell {toxinidir}
     ruff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
