build: adjust codespell path to ignore libs that aren't ours

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ deps =
     # renovate: datasource=pypi
     codespell==2.2.6
 commands =
-    codespell {toxinidir}
+    codespell {[vars]all_path} README.md *.yaml
     ruff {[vars]all_path}
     ruff format --check --diff {[vars]all_path}
 
