--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     # renovate: datasource=pypi
     ruff==0.5.1
 commands =
-    ruff --fix {[vars]all_path}
+    ruff check --fix {[vars]all_path}
     ruff format {[vars]all_path}
 
 [testenv:lint]
@@ -38,7 +38,7 @@ deps =
     codespell==2.3.0
 commands =
     codespell {[vars]all_path} README.md *.yaml
-    ruff {[vars]all_path}
+    ruff check {[vars]all_path}
     ruff format --check --diff {[vars]all_path}
 
 [testenv:unit]
